WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153170
CSP: Fix parsing of 'host/path' source expressions
https://bugs.webkit.org/show_bug.cgi?id=153170
Summary
CSP: Fix parsing of 'host/path' source expressions
Daniel Bates
Reported
2016-01-15 18:11:10 PST
We should merge <
https://src.chromium.org/viewvc/blink?view=rev&revision=154875
>. CSP: Fix parsing of 'host/path' source expressions. We currently accept 'host:port/path' source expressions in CSP directive source lists, but fail to properly parse 'host/path' as a valid source. This patch corrects the tiny logic error in path parsing.
Attachments
Patch
(4.00 KB, patch)
2016-02-16 12:14 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-01-27 21:05:14 PST
<
rdar://problem/24383407
>
Daniel Bates
Comment 2
2016-02-16 12:14:51 PST
Created
attachment 271463
[details]
Patch
Brent Fulgham
Comment 3
2016-02-16 12:17:08 PST
Comment on
attachment 271463
[details]
Patch r=me, but why does the patch not apply to trunk? Please make sure test pass before landing, since EWS is not happy here.
Daniel Bates
Comment 4
2016-02-16 12:27:00 PST
(In reply to
comment #3
)
> Comment on
attachment 271463
[details]
> Patch > > r=me, but why does the patch not apply to trunk? Please make sure test pass > before landing, since EWS is not happy here.
Notice that EWS bots fail to apply the changes to file LayoutTests/TestExpectations, included in this patch: <
https://webkit-queues.webkit.org/results/841475
>. These changes fail to apply because the LayoutTests/TestExpectations diff depends on the changes to the file LayoutTests/TestExpectations made in the patch for
bug #153168
. I verified locally that all tests pass with this patch (
attachment #271463
[details]
).
Daniel Bates
Comment 5
2016-02-16 13:18:17 PST
Comment on
attachment 271463
[details]
Patch Clearing flags on attachment: 271463 Committed
r196655
: <
http://trac.webkit.org/changeset/196655
>
Daniel Bates
Comment 6
2016-02-16 13:18:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug